Fix Text Hover alignment and change padding default

--- a/src/blocks/image-maxi/style.scss
+++ b/src/blocks/image-maxi/style.scss
@@ -32,7 +32,7 @@ body.maxi-blocks--active figure.maxi-image-block {
 		&__content {
 			display: flex;
 			flex-direction: column;
-			padding: 2rem;
+			padding: 4rem;
 			height: 100%;
 
 			&--center-center {
